# chatbot

./: CNAME  pyproject.toml  requirements.txt
backend/: app.py  main.py
backend/controllers/: clientController.py  jobController.py
backend/routes/: Client.py  jobSeeker.py  server.py
backend/utils/: emailService.py  validateInput.py
config/: dbconfig.py
database/: schema.sql
src/components/: ChatWindows.py  InputBox.py  MessageBubble.py
src/data/: departments.json  employment.json  jobseeker.json  services.json
src/template/: chatbot.html
