[project]
name = "technobot"
version = "0.1.0"
description = "A chatbot backend for Techno Brain chatbot"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "flask",
  "requests",
  "python-dotenv"
]

[tool.setuptools]
packages = ["technobot"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
